--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ h1 b {
 
 .info {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: center;
   padding: 50px 20px;
 }
 
@@ -77,6 +78,7 @@ h1 b {
 
 .info-card {
   flex: 1;
+  flex-wrap: wrap;
   margin: 0 10px;
   padding: 20px;
   background: #ffffff;
