--- a/style.css
+++ b/style.css
@@ -64,10 +64,10 @@ h1 b {
 
 .info {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
+  flex-direction: column; 
+  align-items: center; 
   padding: 50px 20px;
+  gap: 20px;           
 }
 
 .info h2 {
@@ -78,9 +78,7 @@ h1 b {
 }
 
 .info-card {
-  flex: 1;
-  flex-wrap: wrap;
-  margin: 0 10px;
+  width: 80%;
   padding: 20px;
   background: #ffffff;
   border: 1px solid #ddd;
