--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h1 b {
 .info {
   display: flex;
   flex-direction: column;
-  align-items: justify;
+  align-items: center;
   padding: 50px 20px;
   gap: 20px;
 }
