--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #F6F6EE;
 }
 
 .hero {
   text-align: center;
   padding: 100px 20px;
-  background-color: #f5f5f5;
+  background-color: #B2AC88;
 }
 
 .small-title {
