--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 .hero {
   text-align: center;
   padding: 100px 20px;
-  background-color: #B2AC88;
+  background-color: #d6e3d0;
 }
 
 .small-title {
