--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h1 b {
 }
 
 .feature-card {
+  font-family: FarmFresh;
   flex: 1;
   margin: 0 10px;
   padding: 20px;
@@ -66,6 +67,7 @@ h1 b {
 }
 
 .info {
+  font-family: FarmFresh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -114,5 +116,14 @@ footer {
   }
   .feature-card {
     margin: 10px 0;
+  }
+  .info {
+    flex-direction: column;
+    padding: 30px 10px;
+  }
+
+  .info-card {
+    width: 100%; 
+    margin: 10px 0; 
   }
 }
