--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1 b {
 .cta {
   padding: 15px 30px;
   font-size: 1rem;
-  background-color: #007bff;
+  background-color: #697855;
   color: white;
   border: none;
   border-radius: 5px;
